--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+### gitlab-rails ###
+gitlab-rails/config/
+gitlab-rails/data/
+gitlab-rails/logs/
+
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
