--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,25 @@
             <version>5.13.4</version>
             <scope>test</scope>
         </dependency>
+        <!-- These two are required by JavaFixture, or so does readme say (it lies). -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.13.4</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.13.4</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.nylle</groupId>
+            <artifactId>javafixture</artifactId>
+            <version>2.13.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
