--- a/gitlab-runner/docker-compose.yml
+++ b/gitlab-runner/docker-compose.yml
@@ -4,6 +4,6 @@ services:
     container_name: "gitlab-runner"
     volumes:
       - "./config:/etc/gitlab-runner"
-      - "./var/run/docker.sock:/var/run/docker.sock"
+      - "/var/run/docker.sock:/var/run/docker.sock"
     extra_hosts:
       - "host.docker.internal:host-gateway"
