--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,6 @@ stages:
   - build
   - test
   - deploy
-  - push-image
 
 cache:
   paths:
@@ -18,7 +17,6 @@ build_job:
     - runner
   stage: build
   script:
-    - "echo $CI_COMMIT_TAG"
     - "mvn compile"
 
 test_job:
@@ -43,5 +41,5 @@ deploy_job:
       command:
         - "--insecure-registry=host.docker.internal:5000"
   script:
-    - "docker build -t host.docker.internal:5000/my-app:1.0.0 -t host.docker.internal:5000/my-app:$CI_COMMIT_TAG"
-    - "docker "
+    - "echo $CI_COMMIT_TAG"
+    - "docker build -t host.docker.internal:5000/my-app:1.0.1
