--- a/mailpit/docker-compose.yml
+++ b/mailpit/docker-compose.yml
@@ -1,20 +1,15 @@
+name: "mailpit"
 services:
-  my-app:
-    build:
-      dockerfile: Dockerfile
-      context: .
-    volumes:
-      - ./orders:/my-app/orders
   mailpit:
     image: axllent/mailpit:v1.27
-    container_name: my-app-mailpit
+    container_name: mailpit
     environment:
       - MP_DATABASE=/data/mailpit.db
       - MP_SMTP_AUTH_ACCEPT_ANY=true
       - MP_SMTP_AUTH_ALLOW_INSECURE=true
       - MP_UI_AUTH=user:user
     volumes:
-      - ./mailpit/data:/data
+      - "./data:/data"
     ports:
       - "1025:1025"
       - "8025:8025"
